# lockinspiel-next

./: .dockerignore  .gitignore  Cargo.toml  Plan.drawio  docker-bake.hcl  docker-compose.yaml  package.json
.github/workflows/: docker-publish.yml
bruno/: opencollection.yml
bruno/Kratos/: Check Who the Current HTTP Session Belongs To.yml  Complete Login Flow with Username-Email Password Method.yml  Initialize Login Flow for browsers.yml  folder.yml
bruno/Profile/: Create profile.yml  Delete profile avatar.yml  Get profile.yml  Replace profile avatar.yml  Update profile.yml  folder.yml
bruno/Session/: Logout.yml  New session.yml  folder.yml
bruno/Tag/: Delete a tag.yml  Get tags.yml  Modify a tag.yml  Post a tag.yml  folder.yml
bruno/Time_split/: Delete a time split (DELETE).yml  Delete a time split timer.yml  Delete a time split.yml  Get time splits.yml  Modify a time split (POST).yml  Modify a time split (PUT).yml  Modify a time split timer.yml  Modify a time split.yml  Post a time split timer.yml  Post a time split.yml  folder.yml
bruno/Timer/: Modify a timer.yml  Post a timer.yml  Retreive a timer.yml  folder.yml
bruno/User/: Create account.yml  Delete account.yml
bruno/environments/: Local.yml  Production.yml  Staging.yml
bun/: Dockerfile  Dockerfile.frontend
crates/lockinspiel-auth/: Cargo.toml
crates/lockinspiel-auth/src/: routes.rs
crates/lockinspiel-backend-common/: Cargo.toml
crates/lockinspiel-backend-common/migrations/2026-04-19-021910-0000_add_user_role/: up.sql
crates/lockinspiel-backend-common/src/: auth.rs  lib.rs  schema.rs  sql_types.rs  users.rs
docker/: Dockerfile  docker-entrypoint.sh
docker/bun/: Dockerfile  Dockerfile.frontend
docker/java/: Dockerfile
docker/jwkinator/: Dockerfile  Dockerfile.nginx  certificate.pem  private.pem  run.sh
docker/postgres/: Dockerfile  init-user-db.sh
docker/rust/: Dockerfile
java/: .dockerignore  Dockerfile
java/spring_packages/lockinspiel-analyzer/: pom.xml
lockinspiel-auth/: Cargo.toml
lockinspiel-auth/src/: main.rs  routes.rs
lockinspiel-backend-common/: Cargo.toml
lockinspiel-backend-common/migrations/2026-03-31-172722-0000_initial/: down.sql  up.sql
lockinspiel-backend-common/src/: auth.rs  cli_level_filter.rs  error.rs  jwk_set.rs  lib.rs  schema.rs  telemetry.rs  users.rs
lockinspiel-common/: Cargo.toml
lockinspiel-tauri/: package.json  pnpm-lock.yaml
lockinspiel-tauri/src-tauri/: Cargo.toml  tauri.conf.json
lockinspiel-tauri/src-tauri/src/: main.rs
lockinspiel-tauri/src/lib/: database.types.ts  supabaseClient.ts  timerManager.ts
lockinspiel-tauri/src/routes/: +page.svelte
lockinspiel-tauri/supabase/: config.toml
lockinspiel-tauri/supabase/.temp/: pooler-url  project-ref
lockinspiel-tauri/supabase/migrations/: 20260327134318_initial.sql
lockinspiel-timekeeper/: package.json
lockinspiel-timekeeper/src/: index.ts
postgres/: init-user-db.sh
rust/: Cargo.toml  Dockerfile  docker-entrypoint.sh
rust/crates/backend/lockinspiel-backend-common/: Cargo.toml
rust/crates/backend/lockinspiel-backend-common/src/: auth.rs  error.rs  lib.rs  sql_types.rs  telemetry.rs
rust/crates/backend/lockinspiel-timekeeper/: Cargo.toml
rust/crates/backend/lockinspiel-timekeeper/src/: main.rs
rust/crates/backend/lockinspiel-timekeeper/src/routes/: mod.rs  tag.rs  time_split.rs  timer.rs
rust/crates/backend/lockinspiel-timesync/: justfile
rust/crates/backend/lockinspiel-timesync/benches/: benchmark.rs
rust/crates/backend/lockinspiel-timesync/src/: main.rs
rust/crates/backend/lockinspiel-user/: Cargo.toml
rust/crates/backend/lockinspiel-user/src/: main.rs  routes.rs  url_resolver.rs
rust/crates/lockinspiel-auth/: Cargo.toml
rust/crates/lockinspiel-auth/src/: main.rs  routes.rs
rust/crates/lockinspiel-backend-common/: .env  Cargo.toml
rust/crates/lockinspiel-backend-common/migrations/2026-03-31-172722-0000_initial/: up.sql
rust/crates/lockinspiel-backend-common/migrations/2026-05-10-002122-0000_fix_invisible_refresh_tokens/: down.sql  up.sql
rust/crates/lockinspiel-backend-common/src/: auth.rs  jwk_set.rs  lib.rs  sql_types.rs  telemetry.rs  users.rs
rust/crates/lockinspiel-timesync/: Cargo.toml
rust/crates/lockinspiel-timesync/src/: lib.rs  main.rs
rust/crates/lockinspiel-user/: Cargo.toml
rust/crates/lockinspiel-user/src/: main.rs  routes.rs  templating.rs  url_resolver.rs
rust/crates/schemas/lockinspiel-auth-schema/: .env  Cargo.toml  diesel.toml
rust/crates/schemas/lockinspiel-auth-schema/migrations/: super_migration.sql
rust/crates/schemas/lockinspiel-auth-schema/migrations/2026-03-31-172722-0000_initial/: down.sql  up.sql
rust/crates/schemas/lockinspiel-auth-schema/src/: schema.rs
rust/crates/schemas/lockinspiel-common-schema/: Cargo.toml
rust/crates/schemas/lockinspiel-common-schema/src/: error.rs  lib.rs  sql_types.rs
rust/crates/schemas/lockinspiel-timekeeper-schema/: .env  Cargo.toml  diesel.toml
rust/crates/schemas/lockinspiel-timekeeper-schema/migrations/00000000000000_diesel_initial_setup/: up.sql
rust/crates/schemas/lockinspiel-timekeeper-schema/migrations/2026-06-12-140048-0000_initial/: down.sql  up.sql
rust/crates/schemas/lockinspiel-timekeeper-schema/src/: lib.rs  schema.rs  tag.rs  time_split.rs  timer.rs
rust/crates/schemas/lockinspiel-user-schema/: .env  Cargo.toml  diesel.toml
rust/crates/schemas/lockinspiel-user-schema/migrations/2026-05-13-170959-0000_initial/: down.sql  up.sql
rust/crates/schemas/lockinspiel-user-schema/src/: lib.rs  schema.rs
rust/crates/utoipa-e2e/: Cargo.toml
rust/crates/utoipa-e2e/examples/: api.rs
rust/crates/utoipa-e2e/src/: lib.rs
spring_packages/lockinspiel-analyzer/: pom.xml
spring_packages/lockinspiel-analyzer/src/main/resources/: application.properties
volumes/api/: kong.yml
volumes/garage/: garage.toml
volumes/grafana/: datasource.yml
volumes/kratos/: claims.jsonnet  kratos.yml
volumes/loki/: config.yaml
volumes/otel-collector/: otel-collector-config.yaml
volumes/prometheus/: prometheus.yml
volumes/tempo/: tempo.yaml
(+7 files in other folders)
