[package]
name = "utoipa-e2e"
version = "0.1.0"
edition = "2024"

[features]
utoipa = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "parsing", "printing"] }

[dev-dependencies]
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
utoipa = "5.5.0"
