[package]
name = "lockinspiel-timekeeper"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
diesel.workspace = true
diesel-async.workspace = true
serde.workspace = true
color-eyre.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
lockinspiel-backend-common = { path = "../lockinspiel-backend-common" }
axum-extra = { workspace = true, features = ["typed-header", "cookie"] }
lockinspiel-timekeeper-schema = { path = "../../schemas/lockinspiel-timekeeper-schema", features = ["diesel", "utoipa"] }
serde_json.workspace = true
utoipa-e2e = { path = "../../utoipa-e2e", features = ["utoipa"] }
lockinspiel-common-schema = { path = "../../schemas/lockinspiel-common-schema", features = ["diesel", "utoipa"] }
