[package]
name = "lockinspiel-user"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
clap.workspace = true
diesel.workspace = true
diesel-async.workspace = true
serde.workspace = true
color-eyre.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true
jiff.workspace = true
lockinspiel-backend-common = { path = "../lockinspiel-backend-common" }
axum-extra = { workspace = true, features = ["typed-header", "cookie"] }
lockinspiel-user-schema = { path = "../../schemas/lockinspiel-user-schema", features = ["diesel", "utoipa"] }
aws-sdk-s3 = "1.132.0"
serde_json.workspace = true
