[package]
name = "lockinspiel-common-schema"
version = "0.1.0"
edition.workspace = true

[features]
diesel = ["dep:diesel", "dep:serde_json"]
utoipa = ["dep:utoipa"]

[dependencies]
tracing-error.workspace = true
color-eyre.workspace = true
serde.workspace = true
jiff.workspace = true
diesel = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
axum-core = "0.5.6"
serde_json = { workspace = true, optional = true }
