[package]
name = "lockinspiel-timekeeper-schema"
version = "0.1.0"
edition.workspace = true

[features]
utoipa = ["dep:utoipa", "utoipa-e2e/utoipa", "lockinspiel-common-schema/utoipa"]
diesel = ["dep:diesel", "dep:diesel_migrations", "lockinspiel-common-schema/diesel"]

[dependencies]
serde.workspace = true
uuid.workspace = true
diesel = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-e2e = { path = "../../utoipa-e2e" }
lockinspiel-common-schema = { path = "../lockinspiel-common-schema" }
jiff.workspace = true
yoke.workspace = true
