[package]
name = "lockinspiel-user-schema"
version = "0.1.0"
edition.workspace = true

[features]
diesel = ["dep:diesel", "dep:diesel_migrations"]

[dependencies]
serde.workspace = true
uuid.workspace = true
diesel = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-e2e = { path = "../../utoipa-e2e" }
lockinspiel-common-schema = { path = "../lockinspiel-common-schema" }
